// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileChart snapshot (Step 7 oracle) > clipped-domain bar chart (data outside scale.domain filtered) 1`] = `
{
  "a11y": {
    "altText": "Bar chart showing Clipped Values (5 data points)",
    "dataTableFallback": [
      [
        "value",
        "name",
      ],
      [
        10,
        "A",
      ],
      [
        25,
        "B",
      ],
      [
        40,
        "C",
      ],
      [
        75,
        "D",
      ],
      [
        90,
        "E",
      ],
    ],
    "keyboardNavigable": true,
    "role": "img",
  },
  "animation": undefined,
  "annotations": [],
  "area": {
    "height": 296.1,
    "width": 541.73,
    "x": 35.269999999999996,
    "y": 60.9,
  },
  "axes": {
    "x": {
      "domainLine": undefined,
      "end": {
        "x": 577,
        "y": 357,
      },
      "gridlines": [],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 510,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 35.269999999999996,
        "y": 357,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "tickPosition": "gutter",
      "ticks": [
        {
          "label": "0",
          "position": 35.269999999999996,
          "value": 0,
        },
        {
          "label": "20",
          "position": 251.96200000000002,
          "value": 20,
        },
        {
          "label": "40",
          "position": 468.654,
          "value": 40,
        },
      ],
      "titlePadding": undefined,
    },
    "y": {
      "domainLine": undefined,
      "end": {
        "x": 35.269999999999996,
        "y": 357,
      },
      "gridlines": [
        {
          "major": true,
          "position": 297.33805970149257,
        },
        {
          "major": true,
          "position": 208.95000000000002,
        },
        {
          "major": true,
          "position": 120.56194029850745,
        },
      ],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 510,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 35.269999999999996,
        "y": 60.9,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "tickPosition": "gutter",
      "ticks": [
        {
          "label": "A",
          "position": 297.33805970149257,
          "value": "A",
        },
        {
          "label": "B",
          "position": 208.95000000000002,
          "value": "B",
        },
        {
          "label": "C",
          "position": 120.56194029850745,
          "value": "C",
        },
      ],
      "titlePadding": undefined,
    },
  },
  "chrome": {
    "bottomHeight": 0,
    "title": {
      "maxWidth": 561,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 26,
        "fontWeight": 590,
        "lineHeight": 1.15,
        "textAnchor": "start",
      },
      "text": "Clipped Values",
      "x": 17,
      "y": 17,
    },
    "topHeight": 37.9,
  },
  "crosshair": false,
  "dimensions": {
    "height": 400,
    "width": 600,
  },
  "display": "full",
  "legend": {
    "bounds": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "entries": [],
    "entryGap": 16,
    "labelStyle": {
      "fill": "#09090b",
      "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 11,
      "fontWeight": 400,
      "lineHeight": 1.3,
    },
    "position": "top",
    "swatchChipFill": "rgba(0,0,0,0.04)",
    "swatchGap": 6,
    "swatchSize": 12,
    "type": "categorical",
  },
  "marks": [
    {
      "aria": {
        "label": "A: 10",
      },
      "cornerRadius": 2,
      "data": {
        "name": "A",
        "value": 10,
      },
      "fill": "#06b6d4",
      "height": 57.45223880597016,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "central",
          "fill": "#111111",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "end",
        },
        "text": "10",
        "visible": true,
        "x": 137.616,
        "y": 297.33805970149257,
      },
      "orient": "horizontal",
      "type": "rect",
      "width": 108.34600000000002,
      "x": 35.269999999999996,
      "y": 268.6119402985075,
    },
    {
      "aria": {
        "label": "B: 25",
      },
      "cornerRadius": 2,
      "data": {
        "name": "B",
        "value": 25,
      },
      "fill": "#06b6d4",
      "height": 57.45223880597016,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "central",
          "fill": "#111111",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "end",
        },
        "text": "25",
        "visible": true,
        "x": 300.135,
        "y": 208.95000000000002,
      },
      "orient": "horizontal",
      "type": "rect",
      "width": 270.865,
      "x": 35.269999999999996,
      "y": 180.22388059701493,
    },
    {
      "aria": {
        "label": "C: 40",
      },
      "cornerRadius": 2,
      "data": {
        "name": "C",
        "value": 40,
      },
      "fill": "#06b6d4",
      "height": 57.45223880597016,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "central",
          "fill": "#111111",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "end",
        },
        "text": "40",
        "visible": true,
        "x": 462.654,
        "y": 120.56194029850745,
      },
      "orient": "horizontal",
      "type": "rect",
      "width": 433.384,
      "x": 35.269999999999996,
      "y": 91.83582089552237,
    },
  ],
  "metrics": undefined,
  "theme": {
    "borderRadius": 2,
    "chrome": {
      "byline": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "eyebrow": {
        "color": "#06b6d4",
        "fontSize": 11,
        "fontWeight": 510,
        "lineHeight": 1.4,
      },
      "footer": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "source": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "subtitle": {
        "color": "#71717a",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "title": {
        "color": "#09090b",
        "fontSize": 26,
        "fontWeight": 590,
        "lineHeight": 1.15,
      },
    },
    "colors": {
      "annotationFill": "rgba(0,0,0,0.04)",
      "annotationText": "#71717a",
      "axis": "#71717a",
      "background": "#ffffff",
      "categorical": [
        "#06b6d4",
        "#eb7289",
        "#3bb974",
        "#ad87ed",
        "#e69c3a",
        "#4ba3f7",
        "#eb8656",
        "#8494fa",
        "#00b9c3",
      ],
      "diverging": {
        "brownTeal": [
          "#8c510a",
          "#bf812d",
          "#dfc27d",
          "#f6e8c3",
          "#80cdc1",
          "#35978f",
          "#01665e",
        ],
        "redBlue": [
          "#b2182b",
          "#d6604d",
          "#f4a582",
          "#f7f7f7",
          "#92c5de",
          "#4393c3",
          "#2166ac",
        ],
      },
      "gridline": "rgba(0,0,0,0.1)",
      "negative": "#dc2626",
      "positive": "#16a34a",
      "sequential": {
        "blue": [
          "#deebf7",
          "#c6dbef",
          "#9ecae1",
          "#6baed6",
          "#3182bd",
          "#08519c",
        ],
        "green": [
          "#e5f5e0",
          "#c7e9c0",
          "#a1d99b",
          "#74c476",
          "#31a354",
          "#006d2c",
        ],
        "orange": [
          "#fee6ce",
          "#fdd0a2",
          "#fdae6b",
          "#fd8d3c",
          "#e6550d",
          "#a63603",
        ],
        "purple": [
          "#efedf5",
          "#dadaeb",
          "#bcbddc",
          "#9e9ac8",
          "#756bb1",
          "#54278f",
        ],
        "teal": [
          "#06b6d4",
          "#05a3be",
          "#0490a8",
          "#037d92",
          "#026a7c",
          "#015766",
          "#004450",
        ],
      },
      "text": "#09090b",
    },
    "fonts": {
      "family": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "mono": ""JetBrains Mono", "Fira Code", "Cascadia Code", monospace",
      "sizes": {
        "axisTick": 11,
        "body": 13,
        "small": 11,
        "subtitle": 14,
        "title": 26,
      },
      "weights": {
        "bold": 700,
        "medium": 510,
        "normal": 400,
        "semibold": 590,
      },
    },
    "isDark": false,
    "spacing": {
      "axisMargin": 6,
      "chartToFooter": 8,
      "chromeGap": 4,
      "chromeToChart": 8,
      "padding": 20,
    },
  },
  "tooltipDescriptors": [
    [
      "rect-0",
      {
        "fields": [
          {
            "color": "#06b6d4",
            "label": "name",
            "value": "A",
          },
          {
            "label": "value",
            "value": "10",
          },
        ],
        "title": "A",
      },
    ],
    [
      "rect-1",
      {
        "fields": [
          {
            "color": "#06b6d4",
            "label": "name",
            "value": "B",
          },
          {
            "label": "value",
            "value": "25",
          },
        ],
        "title": "B",
      },
    ],
    [
      "rect-2",
      {
        "fields": [
          {
            "color": "#06b6d4",
            "label": "name",
            "value": "C",
          },
          {
            "label": "value",
            "value": "40",
          },
        ],
        "title": "C",
      },
    ],
  ],
  "watermark": false,
}
`;

exports[`compileChart snapshot (Step 7 oracle) > legend-heavy multi-series line chart 1`] = `
{
  "a11y": {
    "altText": "Line chart showing GDP Growth from 2020 to 2021 with 4 series (US, UK, FR, DE) (8 data points)",
    "dataTableFallback": [
      [
        "date",
        "value",
        "country",
      ],
      [
        "2020-01-01",
        10,
        "US",
      ],
      [
        "2021-01-01",
        40,
        "US",
      ],
      [
        "2020-01-01",
        15,
        "UK",
      ],
      [
        "2021-01-01",
        35,
        "UK",
      ],
      [
        "2020-01-01",
        8,
        "FR",
      ],
      [
        "2021-01-01",
        22,
        "FR",
      ],
      [
        "2020-01-01",
        12,
        "DE",
      ],
      [
        "2021-01-01",
        28,
        "DE",
      ],
    ],
    "keyboardNavigable": true,
    "role": "img",
  },
  "animation": undefined,
  "annotations": [],
  "area": {
    "height": 305.4,
    "width": 631.899,
    "x": 26,
    "y": 105.2,
  },
  "axes": {
    "x": undefined,
    "y": {
      "domainLine": false,
      "end": {
        "x": 26,
        "y": 410.59999999999997,
      },
      "gridlines": [
        {
          "major": true,
          "position": 410.59999999999997,
        },
        {
          "major": true,
          "position": 372.42499999999995,
        },
        {
          "major": true,
          "position": 334.25,
        },
        {
          "major": true,
          "position": 296.075,
        },
        {
          "major": true,
          "position": 257.9,
        },
        {
          "major": true,
          "position": 219.725,
        },
        {
          "major": true,
          "position": 181.55,
        },
        {
          "major": true,
          "position": 143.375,
        },
        {
          "major": true,
          "position": 105.2,
        },
      ],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 510,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 26,
        "y": 105.2,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": false,
      "tickPosition": "inline",
      "ticks": [
        {
          "label": "0",
          "position": 410.59999999999997,
          "value": 0,
        },
        {
          "label": "5",
          "position": 372.42499999999995,
          "value": 5,
        },
        {
          "label": "10",
          "position": 334.25,
          "value": 10,
        },
        {
          "label": "15",
          "position": 296.075,
          "value": 15,
        },
        {
          "label": "20",
          "position": 257.9,
          "value": 20,
        },
        {
          "label": "25",
          "position": 219.725,
          "value": 25,
        },
        {
          "label": "30",
          "position": 181.55,
          "value": 30,
        },
        {
          "label": "35",
          "position": 143.375,
          "value": 35,
        },
        {
          "label": "40",
          "position": 105.2,
          "value": 40,
        },
      ],
      "titlePadding": undefined,
    },
  },
  "chrome": {
    "bottomHeight": 43.4,
    "source": {
      "maxWidth": 755,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
        "textAnchor": "start",
      },
      "text": "World Bank",
      "x": 20,
      "y": 8,
    },
    "subtitle": {
      "maxWidth": 755,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": 1.45,
        "textAnchor": "start",
      },
      "text": "Four-country comparison",
      "x": 20,
      "y": 53.9,
    },
    "title": {
      "maxWidth": 755,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 26,
        "fontWeight": 590,
        "lineHeight": 1.15,
        "textAnchor": "start",
      },
      "text": "GDP Growth",
      "x": 20,
      "y": 20,
    },
    "topHeight": 62.2,
  },
  "crosshair": true,
  "dimensions": {
    "height": 500,
    "width": 800,
  },
  "display": "full",
  "endpointLabels": {
    "bounds": {
      "height": 305.4,
      "width": 45.561,
      "x": 675.899,
      "y": 105.2,
    },
    "entries": [
      {
        "color": "#06b6d4",
        "dataY": 105.2,
        "labelLines": [
          "US",
        ],
        "labelY": 105.2,
        "marker": {
          "fill": "#ffffff",
          "radius": 4,
          "stroke": "#06b6d4",
          "strokeWidth": 2,
          "x": 657.899,
          "y": 105.2,
        },
        "seriesKey": "US",
        "showLeader": false,
        "value": "40",
      },
      {
        "color": "#eb7289",
        "dataY": 143.375,
        "labelLines": [
          "UK",
        ],
        "labelY": 139.95,
        "marker": {
          "fill": "#ffffff",
          "radius": 4,
          "stroke": "#eb7289",
          "strokeWidth": 2,
          "x": 657.899,
          "y": 143.375,
        },
        "seriesKey": "UK",
        "showLeader": false,
        "value": "35",
      },
      {
        "color": "#3bb974",
        "dataY": 242.62999999999997,
        "labelLines": [
          "FR",
        ],
        "labelY": 236.12999999999997,
        "marker": {
          "fill": "#ffffff",
          "radius": 4,
          "stroke": "#3bb974",
          "strokeWidth": 2,
          "x": 657.899,
          "y": 242.62999999999997,
        },
        "seriesKey": "FR",
        "showLeader": false,
        "value": "22",
      },
      {
        "color": "#ad87ed",
        "dataY": 196.82,
        "labelLines": [
          "DE",
        ],
        "labelY": 190.32,
        "marker": {
          "fill": "#ffffff",
          "radius": 4,
          "stroke": "#ad87ed",
          "strokeWidth": 2,
          "x": 657.899,
          "y": 196.82,
        },
        "seriesKey": "DE",
        "showLeader": false,
        "value": "28",
      },
    ],
    "gap": 8,
    "labelStyle": {
      "fill": "#09090b",
      "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 13,
      "fontWeight": 600,
      "lineHeight": 1.25,
    },
    "swatchChipFill": "rgba(0,0,0,0.04)",
    "swatchSize": 18,
    "valueGap": 4,
    "valueStyle": {
      "fill": "#71717a",
      "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 12,
      "fontWeight": 400,
      "lineHeight": 1.25,
    },
  },
  "legend": {
    "bounds": {
      "height": 85.2,
      "width": 46.54,
      "x": 665.899,
      "y": 105.2,
    },
    "entries": [
      {
        "active": true,
        "color": "#06b6d4",
        "label": "US",
        "shape": "line",
      },
      {
        "active": true,
        "color": "#eb7289",
        "label": "UK",
        "shape": "line",
      },
      {
        "active": true,
        "color": "#3bb974",
        "label": "FR",
        "shape": "line",
      },
      {
        "active": true,
        "color": "#ad87ed",
        "label": "DE",
        "shape": "line",
      },
    ],
    "entryGap": 4,
    "labelStyle": {
      "fill": "#09090b",
      "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 11,
      "fontWeight": 400,
      "lineHeight": 1.3,
    },
    "position": "right",
    "swatchChipFill": "rgba(0,0,0,0.04)",
    "swatchGap": 6,
    "swatchSize": 12,
    "type": "categorical",
  },
  "marks": [
    {
      "aria": {
        "label": "US: line with 2 data points",
      },
      "data": [
        {
          "country": "US",
          "date": "2020-01-01",
          "value": 10,
        },
        {
          "country": "US",
          "date": "2021-01-01",
          "value": 40,
        },
      ],
      "dataPoints": [
        {
          "datum": {
            "country": "US",
            "date": "2020-01-01",
            "value": 10,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#06b6d4",
                "label": "country",
                "value": "US",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "10",
              },
              {
                "label": "date",
                "value": "2020",
              },
            ],
            "title": "2020",
          },
          "x": 47,
          "y": 334.25,
        },
        {
          "datum": {
            "country": "US",
            "date": "2021-01-01",
            "value": 40,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#06b6d4",
                "label": "country",
                "value": "US",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "40",
              },
              {
                "label": "date",
                "value": "2021",
              },
            ],
            "title": "2021",
          },
          "x": 657.899,
          "y": 105.2,
        },
      ],
      "opacity": undefined,
      "path": "M47,334.25L657.899,105.2",
      "points": [
        {
          "x": 47,
          "y": 334.25,
        },
        {
          "x": 657.899,
          "y": 105.2,
        },
      ],
      "seriesKey": "US",
      "stroke": "#06b6d4",
      "strokeDasharray": undefined,
      "strokeWidth": 1.5,
      "type": "line",
    },
    {
      "aria": {
        "label": "UK: line with 2 data points",
      },
      "data": [
        {
          "country": "UK",
          "date": "2020-01-01",
          "value": 15,
        },
        {
          "country": "UK",
          "date": "2021-01-01",
          "value": 35,
        },
      ],
      "dataPoints": [
        {
          "datum": {
            "country": "UK",
            "date": "2020-01-01",
            "value": 15,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#eb7289",
                "label": "country",
                "value": "UK",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "15",
              },
              {
                "label": "date",
                "value": "2020",
              },
            ],
            "title": "2020",
          },
          "x": 47,
          "y": 296.075,
        },
        {
          "datum": {
            "country": "UK",
            "date": "2021-01-01",
            "value": 35,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#eb7289",
                "label": "country",
                "value": "UK",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "35",
              },
              {
                "label": "date",
                "value": "2021",
              },
            ],
            "title": "2021",
          },
          "x": 657.899,
          "y": 143.375,
        },
      ],
      "opacity": undefined,
      "path": "M47,296.075L657.899,143.375",
      "points": [
        {
          "x": 47,
          "y": 296.075,
        },
        {
          "x": 657.899,
          "y": 143.375,
        },
      ],
      "seriesKey": "UK",
      "stroke": "#eb7289",
      "strokeDasharray": undefined,
      "strokeWidth": 1.5,
      "type": "line",
    },
    {
      "aria": {
        "label": "FR: line with 2 data points",
      },
      "data": [
        {
          "country": "FR",
          "date": "2020-01-01",
          "value": 8,
        },
        {
          "country": "FR",
          "date": "2021-01-01",
          "value": 22,
        },
      ],
      "dataPoints": [
        {
          "datum": {
            "country": "FR",
            "date": "2020-01-01",
            "value": 8,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#3bb974",
                "label": "country",
                "value": "FR",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "8",
              },
              {
                "label": "date",
                "value": "2020",
              },
            ],
            "title": "2020",
          },
          "x": 47,
          "y": 349.52000000000004,
        },
        {
          "datum": {
            "country": "FR",
            "date": "2021-01-01",
            "value": 22,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#3bb974",
                "label": "country",
                "value": "FR",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "22",
              },
              {
                "label": "date",
                "value": "2021",
              },
            ],
            "title": "2021",
          },
          "x": 657.899,
          "y": 242.62999999999997,
        },
      ],
      "opacity": undefined,
      "path": "M47,349.52L657.899,242.63",
      "points": [
        {
          "x": 47,
          "y": 349.52000000000004,
        },
        {
          "x": 657.899,
          "y": 242.62999999999997,
        },
      ],
      "seriesKey": "FR",
      "stroke": "#3bb974",
      "strokeDasharray": undefined,
      "strokeWidth": 1.5,
      "type": "line",
    },
    {
      "aria": {
        "label": "DE: line with 2 data points",
      },
      "data": [
        {
          "country": "DE",
          "date": "2020-01-01",
          "value": 12,
        },
        {
          "country": "DE",
          "date": "2021-01-01",
          "value": 28,
        },
      ],
      "dataPoints": [
        {
          "datum": {
            "country": "DE",
            "date": "2020-01-01",
            "value": 12,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#ad87ed",
                "label": "country",
                "value": "DE",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "12",
              },
              {
                "label": "date",
                "value": "2020",
              },
            ],
            "title": "2020",
          },
          "x": 47,
          "y": 318.97999999999996,
        },
        {
          "datum": {
            "country": "DE",
            "date": "2021-01-01",
            "value": 28,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#ad87ed",
                "label": "country",
                "value": "DE",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "28",
              },
              {
                "label": "date",
                "value": "2021",
              },
            ],
            "title": "2021",
          },
          "x": 657.899,
          "y": 196.82,
        },
      ],
      "opacity": undefined,
      "path": "M47,318.98L657.899,196.82",
      "points": [
        {
          "x": 47,
          "y": 318.97999999999996,
        },
        {
          "x": 657.899,
          "y": 196.82,
        },
      ],
      "seriesKey": "DE",
      "stroke": "#ad87ed",
      "strokeDasharray": undefined,
      "strokeWidth": 1.5,
      "type": "line",
    },
  ],
  "metrics": undefined,
  "theme": {
    "borderRadius": 2,
    "chrome": {
      "byline": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "eyebrow": {
        "color": "#06b6d4",
        "fontSize": 11,
        "fontWeight": 510,
        "lineHeight": 1.4,
      },
      "footer": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "source": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "subtitle": {
        "color": "#71717a",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "title": {
        "color": "#09090b",
        "fontSize": 26,
        "fontWeight": 590,
        "lineHeight": 1.15,
      },
    },
    "colors": {
      "annotationFill": "rgba(0,0,0,0.04)",
      "annotationText": "#71717a",
      "axis": "#71717a",
      "background": "#ffffff",
      "categorical": [
        "#06b6d4",
        "#eb7289",
        "#3bb974",
        "#ad87ed",
        "#e69c3a",
        "#4ba3f7",
        "#eb8656",
        "#8494fa",
        "#00b9c3",
      ],
      "diverging": {
        "brownTeal": [
          "#8c510a",
          "#bf812d",
          "#dfc27d",
          "#f6e8c3",
          "#80cdc1",
          "#35978f",
          "#01665e",
        ],
        "redBlue": [
          "#b2182b",
          "#d6604d",
          "#f4a582",
          "#f7f7f7",
          "#92c5de",
          "#4393c3",
          "#2166ac",
        ],
      },
      "gridline": "rgba(0,0,0,0.1)",
      "negative": "#dc2626",
      "positive": "#16a34a",
      "sequential": {
        "blue": [
          "#deebf7",
          "#c6dbef",
          "#9ecae1",
          "#6baed6",
          "#3182bd",
          "#08519c",
        ],
        "green": [
          "#e5f5e0",
          "#c7e9c0",
          "#a1d99b",
          "#74c476",
          "#31a354",
          "#006d2c",
        ],
        "orange": [
          "#fee6ce",
          "#fdd0a2",
          "#fdae6b",
          "#fd8d3c",
          "#e6550d",
          "#a63603",
        ],
        "purple": [
          "#efedf5",
          "#dadaeb",
          "#bcbddc",
          "#9e9ac8",
          "#756bb1",
          "#54278f",
        ],
        "teal": [
          "#06b6d4",
          "#05a3be",
          "#0490a8",
          "#037d92",
          "#026a7c",
          "#015766",
          "#004450",
        ],
      },
      "text": "#09090b",
    },
    "fonts": {
      "family": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "mono": ""JetBrains Mono", "Fira Code", "Cascadia Code", monospace",
      "sizes": {
        "axisTick": 11,
        "body": 13,
        "small": 11,
        "subtitle": 14,
        "title": 26,
      },
      "weights": {
        "bold": 700,
        "medium": 510,
        "normal": 400,
        "semibold": 590,
      },
    },
    "isDark": false,
    "spacing": {
      "axisMargin": 6,
      "chartToFooter": 8,
      "chromeGap": 4,
      "chromeToChart": 8,
      "padding": 20,
    },
  },
  "tooltipDescriptors": [],
  "watermark": false,
}
`;

exports[`compileChart snapshot (Step 7 oracle) > watermarked column chart with gradient fill 1`] = `
{
  "a11y": {
    "altText": "Bar chart showing Gradient Columns across 4 categories (4 data points)",
    "dataTableFallback": [
      [
        "category",
        "score",
      ],
      [
        "A",
        30,
      ],
      [
        "B",
        55,
      ],
      [
        "C",
        70,
      ],
      [
        "D",
        45,
      ],
    ],
    "keyboardNavigable": true,
    "role": "img",
  },
  "animation": undefined,
  "annotations": [],
  "area": {
    "height": 236.3,
    "width": 535.46,
    "x": 41.54,
    "y": 60.9,
  },
  "axes": {
    "x": {
      "domainLine": undefined,
      "end": {
        "x": 577,
        "y": 297.2,
      },
      "gridlines": [],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 510,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 41.54,
        "y": 297.2,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "tickPosition": "gutter",
      "ticks": [
        {
          "label": "A",
          "position": 124.62862068965518,
          "value": "A",
        },
        {
          "label": "B",
          "position": 247.7228735632184,
          "value": "B",
        },
        {
          "label": "C",
          "position": 370.8171264367816,
          "value": "C",
        },
        {
          "label": "D",
          "position": 493.9113793103449,
          "value": "D",
        },
      ],
      "titlePadding": undefined,
    },
    "y": {
      "domainLine": undefined,
      "end": {
        "x": 41.54,
        "y": 297.2,
      },
      "gridlines": [
        {
          "major": true,
          "position": 297.2,
        },
        {
          "major": true,
          "position": 229.68571428571428,
        },
        {
          "major": true,
          "position": 162.17142857142858,
        },
        {
          "major": true,
          "position": 94.65714285714287,
        },
      ],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 510,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 41.54,
        "y": 60.9,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "tickPosition": "gutter",
      "ticks": [
        {
          "label": "0",
          "position": 297.2,
          "value": 0,
        },
        {
          "label": "20",
          "position": 229.68571428571428,
          "value": 20,
        },
        {
          "label": "40",
          "position": 162.17142857142858,
          "value": 40,
        },
        {
          "label": "60",
          "position": 94.65714285714287,
          "value": 60,
        },
      ],
      "titlePadding": undefined,
    },
  },
  "chrome": {
    "bottomHeight": 59.8,
    "byline": {
      "maxWidth": 431,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
        "textAnchor": "start",
      },
      "text": "By the engine",
      "x": 17,
      "y": 27.4,
    },
    "source": {
      "maxWidth": 431,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#71717a",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
        "textAnchor": "start",
      },
      "text": "Test data",
      "x": 17,
      "y": 8,
    },
    "title": {
      "maxWidth": 561,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#09090b",
        "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 26,
        "fontWeight": 590,
        "lineHeight": 1.15,
        "textAnchor": "start",
      },
      "text": "Gradient Columns",
      "x": 17,
      "y": 17,
    },
    "topHeight": 37.9,
  },
  "crosshair": false,
  "dimensions": {
    "height": 400,
    "width": 600,
  },
  "display": "full",
  "legend": {
    "bounds": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "entries": [],
    "entryGap": 16,
    "labelStyle": {
      "fill": "#09090b",
      "fontFamily": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 11,
      "fontWeight": 400,
      "lineHeight": 1.3,
    },
    "position": "top",
    "swatchChipFill": "rgba(0,0,0,0.04)",
    "swatchGap": 6,
    "swatchSize": 12,
    "type": "categorical",
  },
  "marks": [
    {
      "aria": {
        "label": "A: 30",
      },
      "cornerRadius": 2,
      "data": {
        "category": "A",
        "score": 30,
      },
      "fill": {
        "stops": [
          {
            "color": "#ff0000",
            "offset": 0,
          },
          {
            "color": "#0000ff",
            "offset": 1,
          },
        ],
        "type": "linear",
      },
      "height": 101.27142857142857,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "auto",
          "fill": "#0000ff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 10,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "middle",
        },
        "text": "30",
        "visible": true,
        "x": 124.62862068965518,
        "y": 177.92857142857142,
      },
      "orient": "vertical",
      "type": "rect",
      "width": 80.01126436781611,
      "x": 84.62298850574712,
      "y": 195.92857142857142,
    },
    {
      "aria": {
        "label": "B: 55",
      },
      "cornerRadius": 2,
      "data": {
        "category": "B",
        "score": 55,
      },
      "fill": {
        "stops": [
          {
            "color": "#ff0000",
            "offset": 0,
          },
          {
            "color": "#0000ff",
            "offset": 1,
          },
        ],
        "type": "linear",
      },
      "height": 185.6642857142857,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "auto",
          "fill": "#0000ff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 10,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "middle",
        },
        "text": "55",
        "visible": true,
        "x": 247.7228735632184,
        "y": 93.53571428571429,
      },
      "orient": "vertical",
      "type": "rect",
      "width": 80.01126436781611,
      "x": 207.71724137931034,
      "y": 111.53571428571429,
    },
    {
      "aria": {
        "label": "C: 70",
      },
      "cornerRadius": 2,
      "data": {
        "category": "C",
        "score": 70,
      },
      "fill": {
        "stops": [
          {
            "color": "#ff0000",
            "offset": 0,
          },
          {
            "color": "#0000ff",
            "offset": 1,
          },
        ],
        "type": "linear",
      },
      "height": 236.29999999999998,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "auto",
          "fill": "#0000ff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 10,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "middle",
        },
        "text": "70",
        "visible": true,
        "x": 370.8171264367816,
        "y": 42.9,
      },
      "orient": "vertical",
      "type": "rect",
      "width": 80.01126436781611,
      "x": 330.81149425287356,
      "y": 60.9,
    },
    {
      "aria": {
        "label": "D: 45",
      },
      "cornerRadius": 2,
      "data": {
        "category": "D",
        "score": 45,
      },
      "fill": {
        "stops": [
          {
            "color": "#ff0000",
            "offset": 0,
          },
          {
            "color": "#0000ff",
            "offset": 1,
          },
        ],
        "type": "linear",
      },
      "height": 151.90714285714287,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "auto",
          "fill": "#0000ff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 10,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "middle",
        },
        "text": "45",
        "visible": true,
        "x": 493.9113793103449,
        "y": 127.29285714285712,
      },
      "orient": "vertical",
      "type": "rect",
      "width": 80.01126436781611,
      "x": 453.90574712643684,
      "y": 145.29285714285712,
    },
  ],
  "metrics": undefined,
  "theme": {
    "borderRadius": 2,
    "chrome": {
      "byline": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "eyebrow": {
        "color": "#06b6d4",
        "fontSize": 11,
        "fontWeight": 510,
        "lineHeight": 1.4,
      },
      "footer": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "source": {
        "color": "#71717a",
        "fontSize": 11,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "subtitle": {
        "color": "#71717a",
        "fontSize": 14,
        "fontWeight": 400,
        "lineHeight": 1.45,
      },
      "title": {
        "color": "#09090b",
        "fontSize": 26,
        "fontWeight": 590,
        "lineHeight": 1.15,
      },
    },
    "colors": {
      "annotationFill": "rgba(0,0,0,0.04)",
      "annotationText": "#71717a",
      "axis": "#71717a",
      "background": "#ffffff",
      "categorical": [
        "#06b6d4",
        "#eb7289",
        "#3bb974",
        "#ad87ed",
        "#e69c3a",
        "#4ba3f7",
        "#eb8656",
        "#8494fa",
        "#00b9c3",
      ],
      "diverging": {
        "brownTeal": [
          "#8c510a",
          "#bf812d",
          "#dfc27d",
          "#f6e8c3",
          "#80cdc1",
          "#35978f",
          "#01665e",
        ],
        "redBlue": [
          "#b2182b",
          "#d6604d",
          "#f4a582",
          "#f7f7f7",
          "#92c5de",
          "#4393c3",
          "#2166ac",
        ],
      },
      "gridline": "rgba(0,0,0,0.1)",
      "negative": "#dc2626",
      "positive": "#16a34a",
      "sequential": {
        "blue": [
          "#deebf7",
          "#c6dbef",
          "#9ecae1",
          "#6baed6",
          "#3182bd",
          "#08519c",
        ],
        "green": [
          "#e5f5e0",
          "#c7e9c0",
          "#a1d99b",
          "#74c476",
          "#31a354",
          "#006d2c",
        ],
        "orange": [
          "#fee6ce",
          "#fdd0a2",
          "#fdae6b",
          "#fd8d3c",
          "#e6550d",
          "#a63603",
        ],
        "purple": [
          "#efedf5",
          "#dadaeb",
          "#bcbddc",
          "#9e9ac8",
          "#756bb1",
          "#54278f",
        ],
        "teal": [
          "#06b6d4",
          "#05a3be",
          "#0490a8",
          "#037d92",
          "#026a7c",
          "#015766",
          "#004450",
        ],
      },
      "text": "#09090b",
    },
    "fonts": {
      "family": ""Inter Variable", Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "mono": ""JetBrains Mono", "Fira Code", "Cascadia Code", monospace",
      "sizes": {
        "axisTick": 11,
        "body": 13,
        "small": 11,
        "subtitle": 14,
        "title": 26,
      },
      "weights": {
        "bold": 700,
        "medium": 510,
        "normal": 400,
        "semibold": 590,
      },
    },
    "isDark": false,
    "spacing": {
      "axisMargin": 6,
      "chartToFooter": 8,
      "chromeGap": 4,
      "chromeToChart": 8,
      "padding": 20,
    },
  },
  "tooltipDescriptors": [
    [
      "rect-0",
      {
        "fields": [
          {
            "color": "#0000ff",
            "label": "score",
            "value": "30",
          },
          {
            "label": "category",
            "value": "A",
          },
        ],
        "title": "A",
      },
    ],
    [
      "rect-1",
      {
        "fields": [
          {
            "color": "#0000ff",
            "label": "score",
            "value": "55",
          },
          {
            "label": "category",
            "value": "B",
          },
        ],
        "title": "B",
      },
    ],
    [
      "rect-2",
      {
        "fields": [
          {
            "color": "#0000ff",
            "label": "score",
            "value": "70",
          },
          {
            "label": "category",
            "value": "C",
          },
        ],
        "title": "C",
      },
    ],
    [
      "rect-3",
      {
        "fields": [
          {
            "color": "#0000ff",
            "label": "score",
            "value": "45",
          },
          {
            "label": "category",
            "value": "D",
          },
        ],
        "title": "D",
      },
    ],
  ],
  "watermark": true,
}
`;
